trunk/Archive2/f6/b760a0094b905d/output
+ clang++ -std=c++11 -O3 -g -Wall -Wextra -Wpedantic -pthread main.cpp
main.cpp:94:18: error: use of undeclared identifier 'joinLast5'
    test1("5 ", &joinLast5);
                 ^
main.cpp:99:18: error: use of undeclared identifier 'joinLast5'
    test2("5 ", &joinLast5);
                 ^
2 errors generated.
